--- a/CustomerInquiry/CustomerInquiry.csproj
+++ b/CustomerInquiry/CustomerInquiry.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\Helper.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
